# ros-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
source/appl/ros_bridge/: ros_bridge.cpp  ros_bridge.h
source/appl/ros_param_bridge/: ros_param_bridge.cpp
source/appl/ros_src/: CMakeLists.txt
source/appl/ros_src/map/: roslite_map_arrays.map  roslite_map_complex.map  roslite_map_two_listenres.map
source/appl/ros_src/msg/test/: Arrays.msg
source/appl/ros_src/nodes/arrays_listener/: arrays_listener.cpp
source/appl/ros_src/nodes/arrays_talker/: arrays_talker.cpp
source/appl/ros_src/nodes/comp_ender/: comp_ender.cpp
source/appl/ros_src/nodes/comp_listener1/: comp_listener1.cpp
source/appl/ros_src/nodes/comp_listener2/: comp_listener2.cpp
source/appl/ros_src/nodes/comp_talker1/: comp_talker1.cpp
source/appl/ros_src/nodes/comp_talker2/: comp_talker2.cpp
source/appl/ros_src/nodes/listener/: listener.cpp
source/appl/ros_src/nodes/listener2/: listener2.cpp
source/appl/ros_src/nodes/talker/: talker.cpp
source/appl/roslite/: CMakeLists.txt
source/appl/roslite/config/posix/include/roslite/: roslite.h
source/appl/roslite/config/posix/src/: roslite.cpp
source/appl/roslite/config/posix/template/common/: note.cmake  note.cpp
source/appl/roslite/config/posix/template/ros_bridge/: ros_bridge_generated.cmake  ros_bridge_generated.cpp
source/appl/roslite/config/posix/template/ros_src/: init_threads.cpp  roslite_app.cmake  roslite_node.cmake
source/appl/roslite/config/posix/template/roslite/: init.cpp  main_replacer.h  rosl_run  roslite.cmake
source/appl/roslite/include/: XmlRpcUtil.h  XmlRpcValue.h  base64.h
source/appl/roslite/include/ros/: common.h  debug.h  duration.h  info.h  init.h  node_handle.h  publisher.h  rate.h  ros.h  serialization.h  subscriber.h  thread.h  time.h
source/appl/roslite/include/std_msgs/: String.h
source/appl/roslite/include/test/: Arrays.h
source/appl/roslite/scripts/: commons.py  create_map.py  map_gen.py  msg_gen.py  roslite_cli.sh
source/appl/roslite/scripts/ros_packages/: README.md
source/appl/roslite/scripts/roslite_cli/: rosl_build  rosl_create_map  rosl_map_gen  rosl_msg_gen
source/appl/roslite/src/: XmlRpcUtil.cpp  XmlRpcValue.cpp  debug.cpp  info.cpp  init.cpp  node_handle.cpp  publisher.cpp  rate.cpp  subscriber.cpp  thread.cpp  time.cpp
